// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Top Navigation for Desktop should render TopNavDesktop component with log in when user is logged out 1`] = `
<div>
  <nav
    class="navbar"
  >
    <div
      class="navbarBrand"
    >
      <a
        href="/"
      >
        praxis
      </a>
    </div>
    <div
      class="navbarItems"
    >
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/login"
        >
          Log in
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Top Navigation for Desktop should render TopNavDesktop component with profile and log out when user is logged in 1`] = `
<div>
  <nav
    class="navbar"
  >
    <div
      class="navbarBrand"
    >
      <a
        href="/"
      >
        praxis
      </a>
    </div>
    <div
      class="navbarItems"
    >
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/mockUserName"
        >
          mockUserName
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <div
          role="button"
          tabindex="0"
        >
          <a
            class="navbarItemText"
          >
            Log out
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Top Navigation for Desktop should render TopNavDesktop component with sign up and log in when user is logged out and has been invited 1`] = `
<div>
  <nav
    class="navbar"
  >
    <div
      class="navbarBrand"
    >
      <a
        href="/"
      >
        praxis
      </a>
    </div>
    <div
      class="navbarItems"
    >
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/login"
        >
          Log in
        </a>
      </div>
      <div
        class="navbarItem"
      >
        <a
          class="navbarItemText"
          href="/users/signup"
        >
          Sign up
        </a>
      </div>
    </div>
  </nav>
</div>
`;
